deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: usersapi-svc
  namespace: my-test-ns
  labels:
    app: usersapi-lbl
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: usersapi-lbl
