deploy/deploy-all.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: my-test-ns
  name: usersapi-vs
spec:
  hosts:
    - "*"
  gateways:
    - my-test-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/users"
      route:
        - destination:
            port:
              number: 8000
            host: usersapi-svc
---
apiVersion: v1
kind: Service
metadata:
  name: usersapi-svc
  namespace: my-test-ns
  labels:
    app: usersapi-lbl
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: usersapi-lbl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersapi-dpl
  namespace: my-test-ns
  labels:
    app: usersapi-lbl
spec:
  selector:
    matchLabels:
      app: usersapi-lbl
  replicas: 1
  template:
    metadata:
      labels:
        app: usersapi-lbl
    spec:
      containers:
        - name: usersapi
          image: shpboris/usersapi:in-mem
          ports:
            - containerPort: 8000
              protocol: TCP
